# bitround

./: .gitignore  LICENSE  README.md  __init__.py  bitround.c  bitround.toml  core.c  manual.tex  numpy_example.c  old.c  pyproject.toml  setup.py
bitround/: __init__.py  _core.c  _test.py  core.c
bitwiseround/: __init__.py  _core.c  _test.py
